bk support jdk11 control.sh